# mini-pov

./: .gitignore  Cargo.toml  README.md  itm.sh  memory.x  openocd.sh
.cargo/: config
src/: clocksetup.rs  dmasetup.rs  hwsetup.rs  main.rs  spisetup.rs  timersetup.rs  util.rs
src/util/: copy_words.rs
