[package]
authors = ["dirk-dms"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
r0 = "0.2.2"
cortex-m = "0.6.0"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.5.1"
panic-itm = "0.4.1"
#panic-halt = "0.2.0"
stm32ral = {version = "0.2.0", features = ["stm32f401", "rt", "rtfm"]}

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s" # optimize for size
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
